[doc] Update release notes, refs #3366 - Java 17 Support